css/base.css
/* ... */
button::-moz-focus-inner, .button::-moz-focus-inner { 
	padding: 0 15px;
	margin: 0 -15px;
}

iframe {
	border: none;
}

.header {
	height: 130px;
	background-image: url("/images/header2016.png");
	background-repeat: no-repeat;
    background-position: bottom center;
	background-color: #4E85DB;
}

.logo {
	width: 200px;
	vertical-align: bottom;
	background-color: white;
	border: 5px solid #285cae;
	padding: 5px;
	min-height: 34px;
}

.header-title {
	position: absolute;
	width: 100%;
	top: 5px;
}

.header-title-text {
	font-size: 120%;
	color: #285cae;
	font-style: italic;
}

.header-subtitle {
	position: absolute;
	top: 20px;
	text-align: center;
	width: 100%;
}

.site-search {
	float: right;
	top: 5px;
	right: 5px;
	position: relative;
	z-index: 100;
}

#site-search-input {
	background-color: #3274DA;
	color: white;
	border: 1px solid white;
	width: 175px;
	height: 20px;
	display: inline-block;
	padding: 5px;
	position: relative;
	border-radius: 0;
	-webkit-appearance: none;
}

#site-search-label-text {
	display: none;
}

#site-search-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #C6E0E7;
}
#site-search-input::-moz-placeholder { /* Firefox 19+ */
  color: #C6E0E7;
}
#site-search-input:-ms-input-placeholder { /* IE 10+ */
  color: #C6E0E7;
}
#site-search-input:-moz-placeholder { /* Firefox 18- */
  color: #C6E0E7;
}

#site-search-go {
	position: relative;
	height: 32px;
	margin: 0;
	border-left: none;
	vertical-align: top;
	-webkit-appearance: none;
}

.none-view {
	display: none !important;
}

.content {
	text-align: center;
}

.block-text {
	padding-left: 50px;
	padding-right:	50px;
}

.no-js .lazy {
	display: none;
}

/* Item permanently displayed on the navigation bar */
.nav {
	width: 100%;
	list-style-type: none;
	padding: 0;
	margin-top: -4px;
	margin-bottom: 10px;
	text-align: center;
	position: relative;
	z-index: 98;
	height: 30px;
	-webkit-user-select: none;      
	-moz-user-select: none; 
	-ms-user-select: none;
}

.nav-item {
	display: block;
	width: 33.3333%;
	float: left;
	background-color: #3274DA;
	font-size:85%;
	text-decoration: none;
}

.nav-item:nth-child(odd) {
	background-color: #2d68c4;
}

.nav-item-dropdown-title {
	height: 30px;
	border: 1px solid #285cae;
	border-right: none;
}

#games-title {
	border-left: none;
}

.nav-item-dropdown-title:hover {
	background-color: #5A8FE1;
}

.nav-item-dropdown-title  a {
	display: block;
	height: 30px;
	text-decoration: none;
}

.nav-item-dropdown-title-text {
	display: block;
	position: relative;
	top: 50%;
	color: white;
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}

/* Items within the drop down menu */
.nav-item-dropdown {
	list-style-type: none;
	padding: 0;
	margin: 0;
	position: relative;
	z-index: 99;
	max-height: 0;
	visibility: hidden;
}

#games-drop-down .nav-item-dropdown-contents {
	background-color: #2d68c4;
	width: calc(50% + 420px);
	text-align: left;
}

#games-drop-down .nav-item-preview {
	width: 420px;
	display: inline-block;
	vertical-align: top;
}

#games-drop-down .nav-item-preview-category {
	display: none;
}

#games-drop-down .nav-item-preview-category:first-child {
	display: block;
}

#games-drop-down .nav-item-list {
	width: calc( 100% - 420px );
	display: inline-block;
	text-align: center;
}

.nav-item-list-item {
	height: 30px;
	background-color: #3274DA;
	border: 1px solid #285cae;
	border-top: none;
	width: calc(100% - 1px);
	font-size: 90%;
}

.nav-item:nth-child(even) .nav-item-list-item:nth-child(odd) {
	background-color: #2d68c4 ;
}

.nav-item:nth-child(odd) .nav-item-list-item:nth-child(even) {
	background-color: #2d68c4 ;
}

#games-drop-down .nav-item-list-item {
	border-left: none;
	width: 100%;
}

#social-drop-down .nav-item-list-item {
	border-right: none;
	width: 100%;
	box-sizing: border-box;
}

.nav-item-list-item:hover {
	background-color:#5A8FE1 !important;
}

.nav-item-list-item  a {
	display: block;
	height: 30px;
	text-decoration: none;
}

.nav-item-list-item-text {
	display: block;
	position: relative;
	top: 50%;
	color: white;
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}

/* Hover events to show items */
#games-drop-down:hover {
	visibility: visible;
}
#games-title:hover + #games-drop-down {
	visibility: visible;
	transition-delay: 0.5s;
}
#game103-drop-down:hover {
	visibility: visible;
}
#game103-title:hover + #game103-drop-down {
	visibility: visible;
	transition-delay: 0.5s;
}
#more-drop-down:hover {
	visibility: visible;
}
#more-title:hover + #more-drop-down {
	visibility: visible;
	transition-delay: 0.5s;
}
#more-title.fake-hover:hover + #more-drop-down {
	transition: none;
}

/* End Navigation */

.footer {
	background-color: #3274DA;
	color: white;
	margin-top: 20px;
	padding-top: 20px;
	padding-bottom: 20px;
}

.footer a {
	color: white;
}

.additional-links {
	display: flex;
	flex-wrap: wrap;
	margin-left: auto;
	margin-right: auto;
	max-width: 800px;
}

.additional-links-section {
	vertical-align: top;
	display: inline-block;
	margin: 0 20px 20px 20px;
	flex-grow: 1;
	flex-basis: 0;
	text-align: left;
	min-width: 100px;
}

@media screen and ( max-width: 560px ) {
	.additional-links-section {
		flex-basis: calc(50% - 40px);
	}
}

.additional-links-section-heading {
	margin-bottom: 5px;
}

.addition-links-section-heading-second {
	margin-top: 20px;
}

.additional-links-section a {
	display: block;
	font-size: 85%;
	margin: 1px 0;
}

.social-links {
	height: 24px;
	margin-bottom: 2px;
}

.social-links .fb_iframe_widget span {
	vertical-align: inherit !important;
}

/* Site search */

.header-dropdown-item {
	padding: 0;
	background-color: #3274DA;
	border: 1px solid white;
	border-top: none;
	border-bottom: none;
}

/*.dropdown-item:last-child,*/ .header-dropdown-item:last-child {
	border-bottom: 1px solid white;
}
/*
.dropdown-selected-in-list {
	background-color: #285cae;
}
/* ... */

